name:                localweb
version:             0.1.0.0
synopsis: A simple local web server.
description: Just wraps the fileserver from `wai-app-static` with some command line options.
homepage:            https://github.com/khanage/localweb#readme
license:             BSD3
license-file:        LICENSE
author:              Khan Thompson
maintainer:          khanage@gmail.com
copyright:           2017 Khan Thompson
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable localweb
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , warp
                     , wai
                     , wai-app-static
                     , http-types
                     , optparse-applicative
